[package]
name = "rust_CLI"
version = "0.1.0"
edition = "2021"

license-file = "LICENSE.txt"
description = "copy contains of given file to another."
homepage = "https://github.com/truquy"
repository = "https://github.com/truquy/grep_CLI_Rust"

[dependencies]

clap = { version = "4.0", features = ["derive"] }
